# fly_ruler_proto

./: .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Linux-WiVRn-WayVR-xrizer-MSFS2024-VR指南.md  README.md  RELEASING.md  arch.md  justfile  prompt.md
.github/workflows/: release.yml  seed-msfs-sdk.yml
bindings/godot/: Cargo.toml  README.md
bindings/godot/scripts/: install_addon.sh
bindings/godot/src/: lib.rs  model.rs
bindings/godot/templates/: ADDON_LAYOUT.md  FlyRulerDemo.gd  fly_ruler_proto_godot.gdextension  fly_ruler_runtime_example.gd
bindings/msfs/: Cargo.toml  README.md  build.rs  fly-ruler-msfs.example.toml
bindings/msfs/src/: ai.rs  aircraft.rs  bridge.rs  config.rs  lib.rs  main.rs  simconnect.rs  smoothing.rs
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/examples/: demo_client.py  demo_msfs_ai_client.py  demo_msfs_client.py
bindings/python/src/: client.rs  lib.rs  protocol.rs
bindings/python/src/fly_ruler_proto_python/: __init__.py  _core.pyi  client.py
bindings/python/tests/: test_core.py
core/: Cargo.toml  README.md  build.rs
core/proto/: fly_ruler.proto
core/src/: attitude.rs  config.rs  kernel.rs  lib.rs  logging.rs  management.rs  pb.rs  playback.rs  store.rs  transport.rs  utils.rs
core/src/management/: gate.rs  mod.rs  routes.rs  series.rs  server.rs  workspace.rs
core/src/transport/: client.rs  server.rs
core/tests/: integration_core_flow.rs
proto/: fly_ruler.proto
scripts/: package_msfs_bundle.sh  update_version.py
server/: Cargo.toml  README.md  fly-ruler-server.example.toml
server/src/: config.rs  main.rs
web/: README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/src/: App.vue  api.ts  i18n.test.ts  i18n.ts  main.ts  runtime.test.ts  runtime.ts  shortcuts.test.ts  shortcuts.ts  style.css  types.ts  usePlaybackShortcuts.ts  utils.test.ts  utils.ts
web/src/components/: ChartCard.vue  ChartWorkspace.vue  DataSidebar.vue  InspectorPanel.vue  PlaybackToolbar.vue  TimelineBar.vue
web/src/stores/: series.ts  server.ts  stores.test.ts  workspace.ts
