[workspace]
members = ["core", "server", "bindings/python", "bindings/godot", "bindings/msfs"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["WindLX <1418043337@qq.com>"]
description = "Protobuf UDP runtime and time-series state kernel for aerospace simulation"
license = "MIT"
repository = "https://github.com/WindLX/fly_ruler_proto"

[workspace.dependencies]
tokio = { version = "1.50.0", features = ["rt-multi-thread", "net", "io-util", "macros", "time", "sync", "signal"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
tracing-appender = "0.2.4"
