[package]
name = "fly_ruler_proto_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
bytes = "1.11.1"
thiserror = "2.0.18"
futures-util = { version = "0.3", features = ["sink"] }
arrow = "59.1.0"
parquet = "59.1.0"
dashmap = "6.1.0"
prost = "0.14.3"
prost-types = "0.14.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.23.0", features = ["v4"] }
axum = { version = "0.8.9", features = ["json", "ws"] }
tower-http = { version = "0.6.11", features = ["cors", "trace", "fs"] }
tower = { version = "0.5.3", features = ["util"] }
nalgebra = "0.34.1"

[dev-dependencies]
approx = "0.5"
criterion = "0.8.2"
tokio-test = "0.4.5"
tokio-tungstenite = { version = "0.29.0", features = ["connect"] }

[build-dependencies]
prost-build = "0.14.3"
protoc-bin-vendored = "3.2.0"
