[package]
name = "fly_ruler_proto_godot"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]
# Rust unit tests are disabled for GDExtension crates; the binding is exercised
# from the Godot editor/runtime instead.
test = false
doctest = false

[dependencies]
fly_ruler_proto_core = { path = "../../core" }
tokio.workspace = true
tracing.workspace = true
godot = "0.5.0"