[package]
name = "fly_ruler_proto_godot"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
fly_ruler_proto_core = { path = "../../core" }
tokio.workspace = true
tracing.workspace = true
godot = { version = "0.5.4", features = ["custom-godot"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.8"
