[package]
name = "fly_ruler_proto_msfs"
version.workspace = true
edition.workspace = true
build = "build.rs"

[[bin]]
name = "fly-ruler-msfs-bridge"
path = "src/main.rs"

[dependencies]
fly_ruler_proto_core = { path = "../../core" }
clap = { version = "4.5.60", features = ["derive"] }
ctrlc = "3.5.2"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio.workspace = true
toml = "0.9.8"
tracing.workspace = true
