[project]
name = "fly_ruler_proto_python"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "windlx", email = "1418043337@qq.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
fly_ruler_proto_python = "fly_ruler_proto_python:main"

[tool.maturin]
module-name = "fly_ruler_proto_python._core"
python-packages = ["fly_ruler_proto_python"]
python-source = "src"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.14.0",
    "patchelf>=0.17; sys_platform == 'linux'",
]

[tool.pyright]
include = ["src"]
strict = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
